<?xml version="1.0" encoding="utf-8"?>
<!-- Wrapped in ScrollView so all ecommerce event buttons remain reachable on smaller screens. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".EventsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_event"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_event_with_properties"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_event_with_properties"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_event" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_set_custom_attributes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_set_custom_attributes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_event_with_properties" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_unset_custom_attributes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_unset_custom_attributes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_set_custom_attributes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_increment_custom_attributes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_increment_custom_attributes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_unset_custom_attributes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_purchase"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_increment_custom_attributes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_multiple_purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_multiple_purchase"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_purchase" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_product_viewed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_product_viewed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_multiple_purchase" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_cart_updated_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_cart_updated_add"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_product_viewed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_cart_updated_remove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_cart_updated_remove"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_cart_updated_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_cart_updated_replace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_cart_updated_replace"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_cart_updated_remove" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_checkout_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_checkout_started"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_cart_updated_replace" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_order_placed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_order_placed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_checkout_started" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_order_cancelled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_order_cancelled"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_order_placed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_order_refunded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/btn_log_order_refunded"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_order_cancelled" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
