<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EngagementActivity">


    <EditText
        android:id="@+id/edit_txt_fb_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_facebook_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_fb_friend_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_facebook_friend_count"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_fb_username"/>


    <EditText
        android:id="@+id/edit_txt_tw_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_twitter_user_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_fb_friend_count"/>

    <EditText
        android:id="@+id/edit_txt_tw_user_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_twitter_user_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_tw_id"/>

    <View
        android:id="@+id/splitter_engagement"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_tw_user_description"
        />

    <TextView
        android:id="@+id/txt_email_subscription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/hint_email_subscription"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splitter_engagement"/>

    <RadioGroup
        android:id="@+id/radio_grp_email_subscription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email_subscription"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_email_opted_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_opted_in"
            />
        <RadioButton
            android:id="@+id/radio_email_subscribed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_subscribed"
            />
        <RadioButton
            android:id="@+id/radio_email_unsubscribed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_unsubscribed"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_push_subscription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/hint_push_subscription"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_grp_email_subscription"/>

    <RadioGroup
        android:id="@+id/radio_grp_push_subscription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_push_subscription"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_push_opted_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_opted_in"
            />
        <RadioButton
            android:id="@+id/radio_push_subscribed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_subscribed"
            />
        <RadioButton
            android:id="@+id/radio_push_unsubscribed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_unsubscribed"
            />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_engagement_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/btn_save_user_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>